unpackaged/main/default/objects/PotentielCession__c/PotentielCession__c.object-meta.xml
<CustomObject>
    <label>Potentiel Vente</label>
    <nameField>
        <displayFormat>PV-{00000}</displayFormat>
        <label>Numéro de Potentiel Vente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potentiels Vente</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>