unpackaged/main/default/objects/PotentielCession__c/fields/Accidente__c.field-meta.xml
<CustomField>
    <fullName>Accidente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accidenté</label>
    <type>Checkbox</type>
</CustomField>