unpackaged/main/default/objects/PotentielCession__c/fields/Avec_Groupe_NonOK__c.field-meta.xml
<CustomField>
    <fullName>Avec_Groupe_NonOK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avec Groupe NonOK</label>
    <type>Checkbox</type>
</CustomField>