unpackaged/main/default/objects/PotentielCession__c/fields/Avec_Groupe_OK__c.field-meta.xml
<CustomField>
    <fullName>Avec_Groupe_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avec Groupe OK</label>
    <type>Checkbox</type>
</CustomField>