unpackaged/main/default/objects/PotentielCession__c/fields/B100__c.field-meta.xml
<CustomField>
    <fullName>B100__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B100</label>
    <type>Checkbox</type>
</CustomField>