unpackaged/main/default/objects/PotentielCession__c/fields/Carte_grise__c.field-meta.xml
<CustomField>
    <fullName>Carte_grise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carte grise</label>
    <type>Checkbox</type>
</CustomField>