unpackaged/main/default/objects/PotentielCession__c/fields/CompteRaisonSociale__c.field-meta.xml
<CustomField>
    <fullName>CompteRaisonSociale__c</fullName>
    <label>Compte (Raison Sociale)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Potentiels_Cession</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>