unpackaged/main/default/objects/PotentielCession__c/fields/Decaisse__c.field-meta.xml
<CustomField>
    <fullName>Decaisse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Décaissé</label>
    <type>Checkbox</type>
</CustomField>