unpackaged/main/default/objects/PotentielCession__c/fields/Electrique__c.field-meta.xml
<CustomField>
    <fullName>Electrique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electrique</label>
    <type>Checkbox</type>
</CustomField>