unpackaged/main/default/objects/PotentielCession__c/fields/Essence__c.field-meta.xml
<CustomField>
    <fullName>Essence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Essence</label>
    <type>Checkbox</type>
</CustomField>