unpackaged/main/default/objects/PotentielCession__c/fields/Famille__c.field-meta.xml
<CustomField>
    <fullName>Famille__c</fullName>
    <label>Famille</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Véhicule</fullName>
            </value>
            <value>
                <fullName>Caisse</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Meuble</fullName>
            </value>
            <value>
                <fullName>Pièce détachée Mécanique</fullName>
            </value>
            <value>
                <fullName>Pièce détachée Carrosserie</fullName>
            </value>
            <value>
                <fullName>Equipements Divers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>