unpackaged/main/default/objects/PotentielCession__c/fields/Gasoil__c.field-meta.xml
<CustomField>
    <fullName>Gasoil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gasoil</label>
    <type>Checkbox</type>
</CustomField>