unpackaged/main/default/objects/PotentielCession__c/fields/Gaz__c.field-meta.xml
<CustomField>
    <fullName>Gaz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gaz</label>
    <type>Checkbox</type>
</CustomField>