unpackaged/main/default/objects/PotentielCession__c/fields/Groupe_NonOK__c.field-meta.xml
<CustomField>
    <fullName>Groupe_NonOK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Groupe NonOK</label>
    <type>Checkbox</type>
</CustomField>