unpackaged/main/default/objects/PotentielCession__c/fields/Groupe_OK__c.field-meta.xml
<CustomField>
    <fullName>Groupe_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Groupe OK</label>
    <type>Checkbox</type>
</CustomField>