unpackaged/main/default/objects/PotentielCession__c/fields/Hygiene__c.field-meta.xml
<CustomField>
    <fullName>Hygiene__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hygiène</label>
    <type>Checkbox</type>
</CustomField>