unpackaged/main/default/objects/PotentielCession__c/fields/Non_Roulant__c.field-meta.xml
<CustomField>
    <fullName>Non_Roulant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Roulant</label>
    <type>Checkbox</type>
</CustomField>