unpackaged/main/default/objects/PotentielCession__c/fields/Roulant__c.field-meta.xml
<CustomField>
    <fullName>Roulant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roulant</label>
    <type>Checkbox</type>
</CustomField>