unpackaged/main/default/objects/PotentielCession__c/fields/Sec__c.field-meta.xml
<CustomField>
    <fullName>Sec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sec</label>
    <type>Checkbox</type>
</CustomField>