unpackaged/main/default/objects/PotentielCession__c/fields/Sous_famille__c.field-meta.xml
<CustomField>
    <fullName>Sous_famille__c</fullName>
    <label>Sous famille</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Famille__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>VL</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>SEM</fullName>
            </value>
            <value>
                <fullName>TRICYCLE</fullName>
            </value>
            <value>
                <fullName>CAISSE FRIGORIFIQUE</fullName>
            </value>
            <value>
                <fullName>CAISSE CHASSE</fullName>
            </value>
            <value>
                <fullName>CAISSE SEC</fullName>
            </value>
            <value>
                <fullName>CF 10</fullName>
            </value>
            <value>
                <fullName>CF 25</fullName>
            </value>
            <value>
                <fullName>CF 35</fullName>
            </value>
            <value>
                <fullName>CF 50</fullName>
            </value>
            <value>
                <fullName>CF 55</fullName>
            </value>
            <value>
                <fullName>CF 85</fullName>
            </value>
            <value>
                <fullName>MEUBLE POSITIF</fullName>
            </value>
            <value>
                <fullName>MEUBLE NEGATIF</fullName>
            </value>
            <value>
                <fullName>MEUBLE MULTI</fullName>
            </value>
            <value>
                <fullName>MEUBLE AUTRES</fullName>
            </value>
            <value>
                <fullName>TR</fullName>
            </value>
            <value>
                <fullName>GROUPE FRIGORIFIQUE</fullName>
            </value>
            <value>
                <fullName>HAYON</fullName>
            </value>
            <value>
                <fullName>VPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>