unpackaged/main/default/objects/PotentielCession__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Famille__c</columns>
    <columns>Sous_famille__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>